[gd_scene load_steps=7 format=3 uid="uid://ckq7vkd1x3ll"]

[ext_resource type="Script" uid="uid://cpyf6xbjn1ref" path="res://scripts/spells/void/void_laser.gd" id="1_t3qf7"]
[ext_resource type="Texture2D" uid="uid://cvh6gkg8dj42a" path="res://resources/images/spells/void/void_laser/laser_mid.png" id="2_u6pe0"]
[ext_resource type="Texture2D" uid="uid://canelyoqxt7cr" path="res://resources/images/spells/void/void_laser/laser_end.png" id="3_cfhsi"]
[ext_resource type="Texture2D" uid="uid://cturmxpont854" path="res://resources/images/spells/void/void_laser/laser_haed.png" id="4_hsm0m"]
[ext_resource type="Script" uid="uid://cm8jpnxk4eqex" path="res://component2D/hitbox_component.gd" id="5_hsm0m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cfhsi"]
size = Vector2(13, 15.5)

[node name="VoidLaser" type="Node2D"]
physics_interpolation_mode = 2
scale = Vector2(2, 2)
script = ExtResource("1_t3qf7")

[node name="LaserHaed" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("4_hsm0m")

[node name="Beam" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 80, 0)
width = 12.0
texture = ExtResource("2_u6pe0")
texture_mode = 2

[node name="RayCast" type="RayCast2D" parent="."]
target_position = Vector2(100, 0)
collision_mask = 15
collide_with_areas = true

[node name="LaserEnd" type="Sprite2D" parent="."]
position = Vector2(81, 0)
scale = Vector2(2, 2)
texture = ExtResource("3_cfhsi")
offset = Vector2(-4, -1.5)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="HitboxComponent" type="Node2D" parent="." node_paths=PackedStringArray("spell", "hitbox")]
script = ExtResource("5_hsm0m")
spell = NodePath("..")
hitbox = NodePath("Hitbox")

[node name="Hitbox" type="Area2D" parent="HitboxComponent"]
collision_layer = 48
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent/Hitbox"]
shape = SubResource("RectangleShape2D_cfhsi")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
